<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/highiron"
    android:orientation="vertical"
    tools:context="com.zgty.robotandroid.activity.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/activity_main_padding"
        android:background="@drawable/bolder"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.75">

            <TextView
                android:id="@+id/station_welcome_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/station_welcome"
                android:textColor="@color/red"
                android:textSize="@dimen/activity_main_text_size"
                android:textStyle="bold" />

            <View
                android:id="@+id/robot_num"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/activity_main_left_bottom_margin"
                android:layout_marginLeft="@dimen/activity_main_left_bottom_margin"
                android:layout_weight="2"
                android:background="@drawable/bolder"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/AppTextView"
                        android:text="@string/name_train_num" />

                    <TextView
                        android:id="@+id/train_num_id"
                        style="@style/AppTextView"
                        android:textColor="@color/green_blue" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/train_station_from"
                        style="@style/AppTextView"
                        android:textColor="@color/yellow" />

                    <TextView
                        style="@style/AppTextView"
                        android:text="开往" />

                    <TextView
                        android:id="@+id/train_station_to"
                        style="@style/AppTextView"
                        android:textColor="@color/yellow" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/pre_station_text"
                        style="@style/AppTextView" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/after_station_text"
                        style="@style/AppTextView" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.75"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/AppTextView"
                        android:text="@string/train_state_name" />

                    <TextView
                        android:id="@+id/station_state"
                        style="@style/AppTextView" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.75"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/AppTextView"
                        android:text="@string/train_station_name" />

                    <TextView
                        android:id="@+id/train_station_num"
                        style="@style/AppTextView" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.75"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/AppTextView"
                        android:text="@string/train_from_time" />

                    <TextView
                        android:id="@+id/train_from_time"
                        style="@style/AppTextView" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.75"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/AppTextView"
                        android:text="@string/train_reminder_time" />

                    <TextView
                        android:id="@+id/train_reminder_time"
                        style="@style/AppTextView" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.25"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/choose_train_num"
                        style="@style/AppTextView"
                        android:clickable="true"
                        android:text="@string/choose_train_num"
                        android:textSize="@dimen/activity_main_text_size_large" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/activity_main_left_bottom_margin"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="@dimen/activity_main_left_bottom_margin"
                android:layout_weight="1"
                android:background="@drawable/bolder_blue"
                android:orientation="vertical">

                <include
                    layout="@layout/item_train"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/white" />

                <ListView
                    android:id="@+id/train_list_all"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:divider="@color/white"
                    android:dividerHeight="0.5dp"
                    android:listSelector="@color/yellow_green" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


    <TextView
        android:id="@+id/people_speak"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:textSize="60sp" />

    <TextView
        android:id="@+id/words_anim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center" />
</RelativeLayout>
